--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,16 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/workspace.xml
+/shelf/
+
 .idea/.gitignore
 .idea/compiler.xml
 .idea/encodings.xml
 .idea/jarRepositories.xml
 .idea/misc.xml
 .idea/vcs.xml
+*.target
 
 *.properties
 
