--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,9 @@ hs_err_pid*
 /workspace.xml
 /shelf/
 
-.idea/.gitignore
-.idea/compiler.xml
-.idea/encodings.xml
-.idea/jarRepositories.xml
-.idea/misc.xml
-.idea/vcs.xml
+.gitignore
+.xml
+
 *.target
 
 *.properties
